# ritcoin

./: Cargo.toml  README.md
src/: main.rs
src/libs/: ecc.rs  finite_field.rs  key.rs  macros.rs  math.rs  mod.rs  network.rs  script.rs  signature.rs  transaction.rs
