[package]
name = "ritcoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.0"
rand = "^0.8"
env_logger = "0.10.0"
num-bigint-dig = {version="^0.8", features = ["prime"]}
num-iter = "^0.1.37"
num-traits = "^0.2"
num-integer = "^0.1"
lazy_static = "^1.4"
digest = "^0.10"
sha2 = "^0.10"
ripemd = "^0.1.3"
hex = "^0.4"

[dev-dependencies]
